  * debhelper.in/libc.docs: remove INTERFACE as it has been removed upstream.
  * sysdeps/depflags.pl: don't make libc6 depends on tzdata, as this package
    is of priority required. Should help to debconfize tzdata.
  * sysdeps/i386.mk: ship the Xen flavour of ldconfig in libc6. It should be
    a few percent slower on plain i386, but a lot faster on Xen i386.
  * sysdeps/powerpc.mk: install 64-bit headers (actually gnu/stubs-64.h) 
    directly into /usr/include and provide /usr/include/powerpc64-linux-gnu as
    a symlink to /usr/include for compatibility reasons.  Closes: #391858.

  [ Denis Barbier ]
  * Remove localedata/locale-en_NZ.diff (merged upstream).
  * Remove localedata/locale-nr_ZA.diff (merged upstream).
  * Remove localedata/new-catalan-locales.diff (merged upstream).
  * Remove localedata/update-ZA.diff (merged upstream).
  * Remove localedata/locale-te_IN.diff (merged upstream).
  * Remove locale/iso4217-RON.diff (merged upstream).
  * Update localedata/locales_CH.diff
  * Update localedata/supported.diff
  * Update localedata/locale-hy_AM.diff
  * Update localedata/locale-csb_PL.diff
  * Update localedata/dz_BT-collation.diff
  * Update localedata/locale-ia.diff
  * Update localedata/locales-sr.diff
  * Update localedata/tailor-iso14651_t1.diff
  * Update localedata/fix-lang.diff
  * Update localedata/first_weekday.diff

 -- Aurelien Jarno <aurel32@debian.org>  Mon,  9 Oct 2006 07:24:04 +0200

glibc (2.4-1) UNRELEASED; urgency=low

  * New upstream version 2.4:
    - NPTL is used instead of linuxthreads on alpha.  Closes: #325600.
    - .eh_frame has been fixed.  Closes: #349688.
    - Fix a memory leak in getprotobyname. Closes: #365233.
    - Support for MALLOC_PERTURB has been added.  Closes: #350579.
    - Support for 2.4 kernels has been removed.  Closes: #258740.

  [ Clint Adams ]
  * Remove all/cvs-manual-memory.diff (merged upstream).
  * Remove all/cvs-manual-string.diff (merged upstream).